// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress 1 1`] = `
<div
  className="progress"
>
  <div
    aria-label="progressbar"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={25}
    className="progress-bar"
    role="progressbar"
    style={
      {
        "width": "25%",
      }
    }
  />
</div>
`;

exports[`Progress 2 1`] = `
<div
  className="progress"
>
  <div
    aria-label="progressbar"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={100}
    className="progress-bar"
    role="progressbar"
    style={
      {
        "width": "100%",
      }
    }
  />
</div>
`;
